Website generation with Couscous

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
                         <div class="wy-nav-content">
                 <div class="rst-content">
                     <div role="main" class="document">
-                        <h1 id="fmarkdoc">fmarkdoc</h1>
-<p>Funder Portal Docs</p>
+                        <h1 id="impacttrade-user-guide">Impact&trade; User Guide</h1>
+<p>The purpose of this guide is to provide an overview of the features of the Impact&trade; portal. Specifically you will learn how to:</p>
+<ol>
+<li>Manage your user profile.</li>
+<li>Submit reports to Impact&trade;</li>
+<li>Upload content to the Social Feedback Loop &trade;.</li>
+<li>Export Performance Data.</li>
+</ol>
                     </div>
 
                     <footer>
